# personal-assistant-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: BACKLOG.md
src/app/: bootstrap.py  cli.py  config.py  db.py  main.py
src/app/application/: calendar_service.py  contacts_service.py  notes_service.py
src/app/domain/: models.py  notes_repository.py  repository.py
tests/: conftest.py  test_calendar_service.py  test_contacts_service.py  test_notes_service.py
