[project]
name = "personal-assistant-cli"
version = "0.1.0"
description = "Personal Assistant CLI — manage contacts, notes & birthdays"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
]

[project.scripts]
assistant = "app.main:main"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
